--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
   - pip install .
 
 script:
-  - pytest --flake8 --cov=irmetrics/
+  - pytest --flake8 --cov=irmetrics/ --doctest-modules
 
 deploy:
   provider: pypi
