Add the doctests to the CI (#22)
* Add the doctests to the CI

* Fix the NDCG dosctring

* Fix the DCG scores

* Fix the ap for the moment

* Fix coverage

* Fix the coverage tests

* Release the remaining tests for coverage

* Update the travis configuration

* Add the separate tests for README

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,11 @@ python:
 
 install:
   - pip install -r requirements.txt
-  - pip install .
+  - pip install -e .
 
 script:
-  - pytest --flake8 --cov=irmetrics/
+  - pytest --flake8 --cov=irmetrics/ --doctest-modules 
+  - pytest --doctest-modules README.rst
 
 deploy:
   provider: pypi
