--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,11 @@ python:
 
 install:
   - pip install -r requirements.txt
-  - pip install -e .
+  - pip install .
 
 script:
-  - pytest --flake8 --cov=irmetrics/ --doctest-modules 
-  - pytest --doctest-modules README.rst
+  - pytest --flake8 --cov=irmetrics/
+  - pytest --doctest-modules README.rst irmetrics/
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
