--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
   - pip install .
 
 script:
- - pytest --flake8 --cov=irmetrics/
+ - pytest --cov=irmetrics/
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
