--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ install:
   - pip install .
 
 script:
- - pytest --cov=irmetrics/
+ - pytest --flake8 --cov=irmetrics/	 - pytest --cov=irmetrics/
+ - pytest --doctest-modules README.rst irmetrics/
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
