--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
 
 script:
   - pytest --flake8 --cov=irmetrics/
-  - pytest --doctest-modules README.rst irmetrics/
+  - pytest --doctest-modules README.rst irmetrics/ docs/*.rst
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
