--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ install:
   - pip install .
 
 script:
+  - check-manifest
   - pytest --flake8 --cov=irmetrics/
   - pytest --doctest-modules README.rst irmetrics/ docs/*.rst
 
