--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,13 +20,18 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest pytest-cov
         pip install -r requirements.txt
-        pip install -e .
+        pip install .
+    - name: Check manifest
+      run: |
+        check-manifest
     - name: Lint
       run: |
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         flake8 . --count --max-complexity=10 --max-line-length=79 --statistics
     - name: Test
       run: |
-        pytest --cov=models tests/
+        pytest --flake8 --cov=irmetrics/
+    - name: Check the docs
+      run: |
+        pytest --doctest-modules README.rst irmetrics/ docs/*.rst
